plugins {
	id 'checkstyle'
	id 'java'
	id 'io.spring.javaformat'
	id 'org.springframework.boot'
}

repositories {
	mavenCentral()
}

base {
	archivesName = 'spring-calendar'
}

java {
	sourceCompatibility = 17
	targetCompatibility = 17
}

dependencies {
	checkstyle("io.spring.javaformat:spring-javaformat-checkstyle:$javaFormatVersion")

	implementation(platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES))
	implementation('net.sf.biweekly:biweekly:0.6.7')
	implementation('org.apache.httpcomponents.client5:httpclient5')
	implementation('org.springframework.boot:spring-boot-starter-web')
	implementation('org.webjars:fullcalendar:5.11.3')
	implementation('org.webjars:webjars-locator-core')

	runtimeOnly(platform('com.azure.spring:spring-cloud-azure-dependencies:5.7.0'))
	runtimeOnly('com.azure.spring:spring-cloud-azure-starter-keyvault-secrets')

	testImplementation('org.springframework.boot:spring-boot-starter-test')

	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
}

checkstyle {
	configProperties = [ 'checkstyle.config.dir' : file('config/checkstyle') ]
}

tasks.named("test") {
	useJUnitPlatform()
}
